fix favicon path and fix shopping cart icon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Title</title>
-    <link rel="icon" href="/images/favicon-32x32.png" type="image/x-icon">
+    <title>Product Preview Challenge</title>
+    <link rel="icon" href="~/images/favicon-32x32.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Space+Mono&display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@100;400&family=Space+Mono&display=swap"
